# gloamy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  INTEGRATIONS.md  LICENSE  README.md  bootstrap.sh  citation.cff  clippy.toml  package-lock.json  package.json  quick_test.sh  skills-lock.json  temp.b64  test_policy.rs  test_self_learning_integration.rs  website-copy.md
.gemini/: style-guide.md
.githooks/: pre-push
benches/: agent_benchmarks.rs
crates/robot/: Cargo.toml  PI5_SETUP.md  README.md  robot.toml
crates/robot/src/: config.rs  drive.rs  emote.rs  lib.rs  listen.rs  look.rs  safety.rs  sense.rs  speak.rs  tests.rs  traits.rs
desktop/: LICENSE.md  README.md  design-system.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
dev/: README.md  ci.sh  cli.sh  config.template.toml  docker-compose.ci.yml  docker-compose.yml
docs/: README.fr.md  README.ja.md  README.md  README.ru.md  README.vi.md  README.zh-CN.md  SUMMARY.fr.md  SUMMARY.ja.md  SUMMARY.md  SUMMARY.ru.md  SUMMARY.zh-CN.md  actions-source-policy.md  adding-boards-and-tools.md  agnostic-security.md  android-setup.md  arduino-uno-q-setup.md  audit-logging.md  cargo-slicer-speedup.md  channels-reference.md  ci-map.md  commands-reference.md  commands-reference.vi.md  config-reference.md  custom-providers.md  docs-inventory.md  failure-attribution-analysis.md  failure-attribution-implementation.md  feature-overview.md  frictionless-security.md  gateway-api-reference.md  gui-verification-phase2-phase3.md  hardware-peripherals-design.md  hooks-system.md  i18n-coverage.md  langgraph-integration.md  matrix-e2ee-guide.md  mattermost-setup.md  network-deployment.md  nextcloud-talk-setup.md  nucleo-setup.md  (+16 more)
examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs  failure_attribution_demo.rs
fuzz/: Cargo.toml
python/: README.md  README.vi.md  pyproject.toml
scripts/: bootstrap.sh  fix_mac_icon.py  install.sh  recompute_contributor_tiers.sh  (+1 more)
src/: lib.rs  (+4 more)
(+474 files in other folders)
