[package]
name = "gloamy-robot"
version = "0.1.0"
edition = "2021"
authors = ["iBz-04"]
license = "MIT OR Apache-2.0"
description = "Standalone robot crate for Gloamy with drive, sensing, speech, vision, and safety helpers."
repository = "https://github.com/iBz-04/gloamy"
documentation = "https://docs.rs/gloamy-robot"
readme = "README.md"
keywords = ["robotics", "raspberry-pi", "agent-runtime", "hardware", "ollama"]
categories = ["science::robotics", "embedded", "hardware-support"]
rust-version = "1.87"

[features]
default = ["safety"]
# Core crate capabilities
safety = []           # Enables SafetyMonitor and the SafeDrive wrapper.
ros2 = []             # Marks ROS2-oriented integrations; current backends shell out to `ros2`.
gpio = ["dep:rppal"]  # Enables Linux-only GPIO dependency for direct board integrations.
# Capability markers for downstream gating
lidar = []            # Reserved for LIDAR-specific downstream integrations.
vision = []           # Reserved for vision-specific downstream integrations.

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# HTTP client (for Ollama vision)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Base64 encoding (for image data)
base64 = "0.22"

# Async traits
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["clock", "std"] }

# User directories
directories = "6.0"


[target.'cfg(target_os = "linux")'.dependencies]
# GPIO (Raspberry Pi only, optional)
rppal = { version = "0.22", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[package.metadata.docs.rs]
all-features = true
